--- a/newtab.html
+++ b/newtab.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>New Tab</title>
-    </head>
-    <body>
-        <iframe src="http://home.test.leigh.party" sandbox="allow-scripts allow-top-navigation" id='ifr' style="border: 0; position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></iframe>
-        <script src='newtab.js'></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>New Tab</title>
+  </head>
+  <body>
+    <iframe
+      src="about:blank"
+      style="border: 0; position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"
+    ></iframe>
+    <script src="newtab.js"></script>
+  </body>
 </html>
